--- a/src/html/options.html
+++ b/src/html/options.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <style>
-    .options {
+    .option {
       margin-bottom: 10px;
     }
     #status {
@@ -14,11 +14,12 @@
 </head>
 
 <body>
-  <form>
+  <form style="max-width: 500px;">
     <div style="padding: 0 0 15px 0;">
+      <img src="/src/assets/icons8-amazon-music-96.png" alt="Amazon Music" style="float:left; margin-right: 15px;" />
       <h3>Amazon Music Helper</h3>
       <div class="option">
-      	<label>Amazon Music default playlist:</label>
+      	<label>Default playlist:</label>
       	<select id="amazonMusicHelperDefaultPlaylist" disabled>
       	</select>
       </div>
@@ -28,7 +29,7 @@
         <input type="checkbox" id="amazonMusicHelperShowNotifications">
       </div>
 
-      <div class="option">
+      <div class="option" style="text-align: right;">
         <button id="save" type="button">Save</button>
         <div id="status" style="display: none;">Options saved.</div>
       </div>
